kubernetes-volumes/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-web
  namespace: homework
  labels:
    app: homework
    component: web
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: homework
      component: web
  template:
    metadata:
      labels:
        app: homework
        component: web
    spec:
      nodeSelector:
        homework: "true"
      volumes:
        - name: homework-volume
          persistentVolumeClaim:
            claimName: homework-pvc
        - name: homework-cm
          configMap: 
            name: homework-config

      containers:
        - name: web-server
          image: nginx:1.31.1-alpine
          command: ["sh", "-c"]
          args:
            - nginx -g 'daemon off;'
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 3
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 3
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - name: homework-volume
              mountPath: /homework
            - name: homework-cm
              mountPath: "/etc/nginx/conf.d/default.conf"
              subPath: nginx.conf
            - name: homework-cm
              mountPath: "/homework/conf"
          lifecycle:
            preStop:
              exec:
                command:
                  - rm
                  - -f
                  - /homework/index.html
