kubernetes-volumes/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: homework-web
  namespace: homework
  labels:
    app: homework
    component: web
spec:
  type: ClusterIP
  selector:
    app: homework
    component: web
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
