kubernetes-volumes/httpRoute.yaml
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homework-route
  namespace: homework
spec:
  parentRefs:
    - name: homework-gateway
      namespace: homework
  hostnames:
    - homework.otus
  rules:
    - matches:
        - path:
            type: Exact
            value: /conf/file
      backendRefs:
        - name: homework-web
          port: 8000
    - matches:
        - path:
            type: Exact
            value: /homepage
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.html
      backendRefs:
        - name: homework-web
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homework-web
          port: 8000
